Some aplication properties changes

--- a/spring-cloud-azure-samples/spring-cloud-azure-servicebus-binder-sample/src/main/resources/application.properties
+++ b/spring-cloud-azure-samples/spring-cloud-azure-servicebus-binder-sample/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.cloud.azure.servicebus.namespace=connectedhomehub4
 spring.cloud.stream.bindings.input.destination=test-topic
 spring.cloud.stream.bindings.input.group=test-group
 spring.cloud.stream.bindings.output.destination=test-topic
+
+spring.cloud.stream.servicebus.resourceGroup=connectedhome-servicebus-dev
